--- a/usermanagement-service/pom.xml
+++ b/usermanagement-service/pom.xml
@@ -81,7 +81,7 @@
 							</execution>
 						</executions>
 						<configuration>
-							<repository>stacksimplify/${project.name}</repository>
+							<repository>sachin/${project.name}</repository>
 							<tag>${project.version}</tag>
 							<skipDockerInfo>true</skipDockerInfo>
 						</configuration>
